--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "name": "OneBitExchange",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap": "^4.3.1",
+    "gasparesganga-jquery-loading-overlay": "^2.1.6",
     "jquery": "^3.4.1",
     "tether": "^1.4.6"
   }
